--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "imagemin": "^9.0.0",
     "nuxt": "^3.13.0",
     "papaparse": "^5.4.1",
     "vue": "latest"
